# CHERNY-CHIZH

./: .env.prod.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.prod.yaml  docker-compose.yaml
backend/: .dockerignore  .gitignore  Dockerfile  entrypoint.prod.sh  openapi.json  pyproject.toml  requirements.txt
backend/api_gateway/: urls.py  views.py
backend/common/: admin.py  apps.py  dictionaries.py  models.py  pagination.py  schema.py  serializers.py  signals.py  urls.py  views.py
backend/common/migrations/: 0001_initial.py  0002_fill_status_sex_potential.py  0002_initial.py  0002_puppy_puppyparents.py  0003_add_dog_published_photo_main_doc_type.py  0003_alter_request_last_name.py  0003_move_info_models_to_education.py  0003_puppydocument.py  0003_remove_puppy_international_name_puppy_description.py  0004_add_request_fields.py  0004_alter_puppy_description.py  0004_alter_puppydocument_file.py  0004_alter_request_email.py  0005_puppystatus_puppysex_puppypotential.py  0005_request.py  0006_puppy_use_status_sex_potential_fk.py  (+4 more)
backend/config/: exceptions.py  schema.py  settings.py  storage_backends.py  urls.py  wsgi.py
backend/consumer/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
backend/education/: admin.py  apps.py  constants.py  markdown_utils.py  models.py  permissions.py  schema.py  serializers.py  signals.py  views.py
backend/user_management/: admin.py  apps.py  authentication.py  avatar.py  forms.py  jwt_serializers.py  models.py  permissions.py  schema.py  serializers.py  urls.py  views.py
(+656 files in other folders)
