[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.0.1"
description = "Django backend for the Cherniy Chizh nursery project."
requires-python = ">=3.14"
authors = [
  { name = "Melichova Eva-Sofia", email = "sshultse@yandex.ru" },
]
dependencies = [
  "django>=6.0,<6.1",
  "djangorestframework>=3.15,<4.0",
  "drf-spectacular>=0.27,<0.30",
  "djangorestframework-simplejwt>=5.3,<6.0",
  "django-cors-headers>=4.4,<5.0",
  "django-extensions>=3.2,<4.0",
  "psycopg2-binary>=2.9,<3.0",
  "django-storages>=1.14,<2.0",
  "boto3>=1.34,<2.0",
  "python-dotenv>=1.0,<2.0",
  "markdown>=3.6,<4.0",
  "bleach>=6.1,<7.0",
  "Pillow>=10.0,<11.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-bleach",
  "types-Markdown",
]

[tool.black]
line-length = 88
target-version = ["py314"]
skip-string-normalization = true

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
pretty = true